--- a/sass/sections/_popupChat.scss
+++ b/sass/sections/_popupChat.scss
@@ -12,7 +12,7 @@
         width: 70%;
         background-color: #fff;
         min-width: 510px;
-
+        
         .page-header {
             display: flex;
             align-items: center;
@@ -70,6 +70,7 @@
         height: 400px;
         margin-bottom: 15px;
         border-bottom: 1px solid $line-color;
+        overflow: auto;
 
         .message-other {
             position: relative;
