--- a/sass/sections/_popupLogin.scss
+++ b/sass/sections/_popupLogin.scss
@@ -4,7 +4,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 9;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 
